# Cpp_ND_Capstone_Project

./: README.md
CppND-Capstone-Ising-master/: CMakeLists.txt  README.md
CppND-Capstone-Ising-master/src/: array.h  controller.cpp  controller.h  ising.cpp  ising.h  main.cpp  renderer.cpp  renderer.h  simulator.cpp  simulator.h
